argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/name: ArgoCD
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - argocd.dev.wdalgleish.com
      secretName: argocd-tls
  rules:
  - host: argocd.dev.wdalgleish.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
